--- a/now.json
+++ b/now.json
@@ -3,6 +3,6 @@
   "env": {
     "NODE_ENV": "production",
     "API_KEY": "@sample-apiKey",
-    "DB_URL": "@sample-dbUrl"
+    "DB_URL": "@sample-dbUrl1"
   }
 }
