--- a/now.json
+++ b/now.json
@@ -2,7 +2,7 @@
   "type": "npm",
   "env": {
     "NODE_ENV": "production",
-    "API_KEY": "@sample-apiKey1",
+    "API_KEY": "@sample-apiKey",
     "DB_URL": "@sample-dbUrl1"
   }
 }
