--- a/now.json
+++ b/now.json
@@ -1,8 +1,6 @@
 {
   "type": "npm",
   "env": {
-    "NODE_ENV": "production",
-    "API_KEY": "@sample-apiKey",
-    "DB_URL": "@sample-dbUrl1"
+    "NODE_ENV": "production"
   }
 }
