Revert "No secrets"

--- a/now.json
+++ b/now.json
@@ -1,6 +1,8 @@
 {
   "type": "npm",
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "API_KEY": "@sample-apiKey",
+    "DB_URL": "@sample-dbUrl1"
   }
 }
