--- a/now.json
+++ b/now.json
@@ -2,7 +2,7 @@
   "type": "npm",
   "env": {
     "NODE_ENV": "production",
-    "API_KEY": "@apiKey
+    "API_KEY": "@apiKey"
   },
   "build": {
     "env": {
