--- a/now.json
+++ b/now.json
@@ -1,8 +1,12 @@
 {
   "type": "npm",
   "env": {
-    "NODE_ENV": "production",
-    "API_KEY": "@apiKey"
+    "NODE_ENV": "production"
+  },
+  "build": {
+    "env": {
+      "DB_URL": "@dbUrl"
+    }
   }
 }
 
