--- a/now.json
+++ b/now.json
@@ -1,6 +1,12 @@
 {
   "type": "npm",
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "dbUrl": "@mongodb-url"
+  },
+  "build": {
+    "env": {
+      "API_KEY": "@our-api-key"
+    }
   }
 }
