--- a/now.json
+++ b/now.json
@@ -1,4 +1,10 @@
 {
-  "type": "npm"
+  "type": "npm",
+  "env": {
+    "NOW": "1",
+    "NOW_AB": "1",
+    "ABC-111": "20",
+    "JRR": "11999"
+  }
 }
 
