--- a/now.json
+++ b/now.json
@@ -1,10 +1,12 @@
 {
   "type": "npm",
-  "env": {
-    "NOW": "1",
-    "NOW_AB": "1",
-    "ABC-111": "20",
-    "JRR": "11999"
+  "build": {
+      "env": {
+        "NOW": "1",
+        "NOW_AB": "1",
+        "ABC-111": "20",
+        "JRR": "11999"
+      }
   }
 }
 
