--- a/now.json
+++ b/now.json
@@ -1,12 +1,4 @@
 {
-  "type": "npm",
-  "build": {
-      "env": {
-        "NOW": "1",
-        "NOW_AB": "1",
-        "ABC-111": "20",
-        "JRR": "11999"
-      }
-  }
+  "type": "npm"
 }
 
