--- a/now.json
+++ b/now.json
@@ -4,5 +4,8 @@
     "NODE_ENV": "production",
     "API_KEY": "@sample-apiKey",
     "DB_URL": "@sample-dbUrl1000"
+  },
+  "github": {
+    "enabled": false
   }
 }
