--- a/now.json
+++ b/now.json
@@ -1,8 +1,3 @@
 {
-  "type": "npm",
-  "env": {
-    "NODE_ENV": "production",
-    "API_KEY": "@sample-apiKey",
-    "DB_URL": "@sample-dbUrl1000"
-  }
+  "type": "static"
 }
