--- a/now.json
+++ b/now.json
@@ -1,5 +1,5 @@
 {
-  "type": "static",
+  "type": "static2",
   "alias": [
     "akurulk-simple-now-app.now.sh",
     "akurulk-1-simple-now-app.now.sh"
