--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "type": "static",
   "alias": [
-    "akurulk-simple-now-app.now.sh",
+    "now.sh",
     "akurulk-1-simple-now-app.now.sh"
   ]
 }
