--- a/now.json
+++ b/now.json
@@ -3,5 +3,8 @@
   "alias": [
     "akurulk-simple-now-app.now.sh",
     "akurulk-1-simple-now-app.now.sh"
-  ]
+  ],
+  "github": {
+    "aliasing": false
+  }
 }
