--- a/now.json
+++ b/now.json
@@ -4,5 +4,13 @@
   "alias": [
     "akurulk-simple-now-app.now.sh",
     "akurulk-1-simple-now-app.now.sh"
-  ]
+  ],
+  {
+    "scale": {
+      "sfo": {
+        "min": 1,
+        "max": 1
+      }
+    }
+  }
 }
