--- a/now.json
+++ b/now.json
@@ -2,7 +2,7 @@
 {
   "type": "static",
   "alias": [
-    "akurulk-simple-now-app.now.sh",
+    "akurulk-simple-now-app",
     "akurulk-1-simple-now-app.now.sh"
   ]
 }
