--- a/now.json
+++ b/now.json
@@ -2,8 +2,7 @@
 {
   "type": "static",
   "alias": [
-    "akurulk-simple-now-app",
-    "akurulk-1-simple-now-app.now.sh"
+    "akurulk-10-simple-now-app"
   ]
 }
 
