--- a/now.json
+++ b/now.json
@@ -3,7 +3,7 @@
   "version": 1,
   "type": "static",
   "alias": [
-    "akurulk-11111-simple-now-app-dsds"
+    "some-other-new-domain.com"
   ]
 }
 
