--- a/now.json
+++ b/now.json
@@ -1,11 +1,3 @@
 {
-  "version": 1,
-  "type": "static",
-  "alias": [
-    "akurulk-11111-simple-now-app-dsds.now.sh"
-  ]
+  "version": 2
 }
-
-
-
-
