--- a/now.json
+++ b/now.json
@@ -4,6 +4,8 @@
   "scope": "zeit",
   "alias": [
     "google.com",
-    "simple1234.com"
+    "simple1234.com",
+    "ppo.now.sh",
+    "dsdsdssds"
   ]
 }
