--- a/now.json
+++ b/now.json
@@ -4,6 +4,8 @@
   "scope": "zeit",
   "alias": [
     "google.com",
+    "arunoda.google.com",
+    "iogoogle.com",
     "simple1234.com",
     "ppo.now.sh",
     "dsdsdssds"
