--- a/now.json
+++ b/now.json
@@ -1,14 +1,6 @@
 
 {
   "version": 2,
-  "scope": "zeit",
-  "alias": [
-    "google.com",
-    "arunoda.google.com",
-    "iogoogle.com",
-    "simple1234.com",
-    "ppo.now.sh",
-    "dsdsdssds"
-  ]
+  "scope": "zeit"
 }
 
