--- a/now.json
+++ b/now.json
@@ -1,12 +1,3 @@
 {
-  "version": 2,
-  "alias": [	
-    "google.com",	
-    "arunoda.google.com",	
-    "iogoogle.com",	
-    "simple1234.com",	
-    "ppo.now.sh",	
-    "dsdsdssds",
-    "zeit.co"
-  ]	
+  "version": 2
 }
